--- a/code-bar-job-board-app/package.json
+++ b/code-bar-job-board-app/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^9.6.1",
+    "firebase-admin": "^10.0.1",
     "firebase-functions": "^3.16.0",
+    "firebase-tools": "^9.23.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
