--- a/code-bar-job-board-app/functions/package.json
+++ b/code-bar-job-board-app/functions/package.json
@@ -14,6 +14,9 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
   },
