--- a/code-bar-job-board-app/package.json
+++ b/code-bar-job-board-app/package.json
@@ -17,6 +17,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "remark-gfm": "^3.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
